# AviUtl2_BuildTools

./: README.md  build_lib.py  pyproject.toml
astra/: __init__.py  __main__.py  cli.py
astra/core/: build.py  install.py  package.py  template.py
