[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra"
version = "0.1.0"
description = "A tool for building, installing, and packaging scripts for AviUtl ExEdit2"
requires-python = ">=3.11.9"
authors = [
    { name = "Korarei" }
]
dependencies = [
    "jsonschema>=4.25.1"
]

[project.scripts]
astra = "astra.cli:main"
